Add a Effort resource and support GET (with unit tests, acceptance tests, and updated doc) Rename the required lib to the right name and fix some descriptions in defect testing Max use of the util function for building the URL path
