# api_doc/v1/swagger.json
@@ -31,6 +31,9 @@
         },
         {
             "name": "Defect"
+        },
+        {
+            "name": "Effort"
         }
     ],
     "paths": {
@@ -331,6 +334,45 @@
                         "description": "Successful response",
                         "schema": {
                             "title": "defect",
+                            "type": "object"
+                        }
+                    },
+                    "404": {
+                        "description": "Project was not found",
+                        "schema": {
+                            "title": "error",
+                            "type": "object"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "title": "error",
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/<name>/effort": {
+            "get": {
+                "tags": [
+                    "Effort"
+                ],
+                "description": "Provides the effort resource of a project.\n",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "type": "string",
+                        "description": "The name of the Project to act upon."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "title": "effort",
                             "type": "object"
                         }
                     },
